reduced image file sizes

--- a/index.html
+++ b/index.html
@@ -111,13 +111,13 @@
 				<section>
 					<h3 class="fragment" style="position:fixed; top:0; padding-left: 13%;"><code>print(stc.past_events[0])</code></h3>
 					<h3 class="fragment" style="padding-top: 1em">AppLaunch</h3>
-					<img src="img/applaunch.png" class="fragment" style="width:60%; border: none">
+					<img src="img/applaunch.jpg" class="fragment" style="width:60%; border: none">
 				</section>
 
 				<section>
 					<h3 class="fragment" style="position:fixed; top:0; padding-left: 13%;"><code>print(stc.past_events[1])</code></h3>
 					<h3 class="fragment" style="padding-top: 1em">Android</h3>
-					<img src="img/android_logo_PNG35.png" class="fragment" style="width:60%; border: none">
+					<img src="img/android_logo_PNG35.jpg" class="fragment" style="width:60%; border: none">
 				</section>
 
 				<section>
