added future events + member fees

--- a/index.html
+++ b/index.html
@@ -57,18 +57,18 @@
 				</section>
 
 				<section>
-					<h2 class="fragment" style="position:fixed; top:0; padding-left: 8%;"><code>print(stc.purpose)</code></h2>
+					<h2 class="fragment" style="position:fixed; top:0; padding-left: 12%;"><code>print(stc.purpose)</code></h2>
 					<p class="fragment" style="padding-top: 2em;">There is a gap between the tech education and the tech industry</p>
 					<p class="fragment"><img src="img/bridge.png" style="width: 60%;"></p>
 				</section>
 
 				<section>
-					<h2 class="fragment" style="position:fixed; top:0; padding-left: 10%;"><code>print(stc.vision)</code></h2>
+					<h2 class="fragment" style="position:fixed; top:0; padding-left: 14%;"><code>print(stc.vision)</code></h2>
 					<p class="fragment">Building a community of Sunway students with the aspiration of minimising the disparity between tech education, tech industry, and tech entrepreneurship.</p>
 				</section>
 
 				<section>
-					<h2 class="fragment" style="position:fixed; top:0; padding-left: 3%;"><code>print(stc.motivators)</code></h2>
+					<h2 class="fragment" style="position:fixed; top:0; padding-left: 8%;"><code>print(stc.motivators)</code></h2>
 					<p class="fragment">"No motivation and inspiration"</p>
 					<p class="fragment">"No place to apply what I've learned"</p>
 					<p class="fragment">"There's no community"</p>
@@ -78,19 +78,19 @@
 				</section>
 
 				<section id="fragment">
-						<p class="fragment">So really</p>
+						<p class="fragment">So really though...</p>
 						<p class="fragment">What <strong>are</strong> we?</p>
 					</section>
 
 				<section>
 					<h2 class="fragment">We are:</h2>
-					<p class="fragment">💥 Building a community</p>
+					<p class="fragment">💥 A community</p>
 					<p class="fragment">📚 Tech education</p>
 					<p class="fragment">💼 Tech entrepreneurship</p>
 				</section>
 
 				<section>
-					<h3>💥 Building a Community</h3>
+					<h3>💥 A Community</h3>
 					<p class="fragment">We're here to build an open community where we collaboratively learn and hack together.</p>
 				</section>
 
@@ -184,16 +184,38 @@
 
 	Just copy the past events sections and change the photos to add the future events
 -->
-
 				<section>
 					<h3 class="fragment" style="position:fixed; top:0; padding-left: 13%;"><code>print(stc.future_events)</code></h3>
-					<h3 class="fragment" style="padding-top: 1em">Future event name</h3>
-					<img src="img/ioxkl.jpg" class="fragment" style="width:60%; border: none">
+					<p class="fragment" style="padding-bottom:0.5em;">Python workshop for beginners!</p>
+					<p class="fragment" style="padding-bottom:0.5em;">React Native Mobile App @ 8th - 9th September</p>
+					<p class="fragment" style="padding-bottom:0.5em;">Telegram bot w/ Azure & Node.js @ 19th September</p>
+					<p class="fragment" style="padding-bottom:0.5em;">Makerspace opening!</p>
+					<p class="fragment" style="padding-bottom:0.5em;">...and more!</p>
 				</section>
 
 				<section>
 					<h3><code>if(student.interest == true)</code></h3>
 				</section>
+
+				<section>
+					<h3 class="fragment"><code>if(student.joinstc() == true)</code></h3>
+					<p class="fragment"><code>> set_currency(MYR)</code></p>
+					<p class="fragment"><code>> float memberfees = 15</code></p>
+					<br>
+					<p class="fragment"><code>> help(joinstc())</code></p>
+					<p class="fragment"><strong><code>> joinstc() : to join Sunway Tech Club, simply approach the registration counter during any of our events!</code></strong></p>
+				</section>
+
+				<section>
+					<p class="fragment"><code>
+						if(student.joinstc() == true) { <br>
+							student.get_goodies();<br>
+						}<br>
+					</code></p>
+					<p class="fragment"><code>> print(student.get_goodies()</code></p>
+					<p class="fragment"><code><strong>> GitHub swag, STC sticker + cheaper/free access to our workshops!</strong></code></p>
+				</section>
+
 
 				<section>
 					<h4><code>> print(stc.slack_info)</code></h4>
@@ -242,10 +264,10 @@
 				<section>
 					<h4><code>> print(stc.contact)</code></h4>
 					<img src="img/stclogo.png" style="border: none; width: 25%">
-					<p class="fragment"><code><strong>> https://bit.do/stcslack/</strong></code></p>
-					<p class="fragment"><code><strong>> https://bit.do/stctelegram</strong></code></p>
-					<p class="fragment"><code><strong>> Email: sunwaytechclub@gmail.com/</strong></code></p>
-					<p class="fragment"><code><strong>> Facebook: fb.com/sunwaytechclub/</strong></code></p>
+					<p><code><strong>> https://bit.do/stcslack/</strong></code></p>
+					<p><code><strong>> https://bit.do/stctelegram/</strong></code></p>
+					<p><code><strong>> Email: sunwaytechclub@gmail.com/</strong></code></p>
+					<p><code><strong>> Facebook: fb.com/sunwaytechclub/</strong></code></p>
 					</section>
 
 			</div>
