--- a/index.html
+++ b/index.html
@@ -287,6 +287,8 @@
 				center: true,
 				width: 1024,
 				height: 720,
+				autoSlide: 1800,
+				loop: true,
 
 				transition: 'slide', // none/fade/slide/convex/concave/zoom
 
