--- a/index.html
+++ b/index.html
@@ -146,13 +146,19 @@
 
 				<section>
 					<h3 class="fragment" style="position:fixed; top:0; padding-left: 13%;"><code>print(stc.past_events[6])</code></h3>
-					<h3 class="fragment" style="padding-top: 1em">GitHub</h3>
+					<h3 class="fragment" style="padding-top: 1em">WebLaunch</h3>
+					<img src="img/weblaunch.jpg" class="fragment" style="width:60%; border: none">
+				</section>
+
+				<section>
+					<h3 class="fragment" style="position:fixed; top:0; padding-left: 13%;"><code>print(stc.past_events[7])</code></h3>
+					<h3 class="fragment" style="padding-top: 1em">GitHub Workshop</h3>
 					<img src="img/github.jpg" class="fragment" style="width:60%; border: none">
 				</section>
 
 				<section>
 					<section>
-						<h3 class="fragment" style="position:fixed; top:0; padding-left: 13%;"><code>print(stc.past_events[7])</code></h3>
+						<h3 class="fragment" style="position:fixed; top:0; padding-left: 13%;"><code>print(stc.past_events[8])</code></h3>
 						<h3 class="fragment" style="padding-top: 1em">Google I/O Extended 2018</h3>
 						<img src="img/ioxkl.jpg" class="fragment" style="width:60%; border: none">
 					</section>
@@ -178,6 +184,12 @@
 					</section>
 				</section>
 
+				<section>
+					<h3 class="fragment" style="position:fixed; top:0; padding-left: 13%;"><code>print(stc.past_events[9])</code></h3>
+					<h3 class="fragment" style="padding-top: 1em">Python Workshop 2018</h3>
+					<img src="img/pythonworkshop2.png" class="fragment" style="width:60%; border: none">
+				</section>
+
 <!--
 	To add new slide, just create a new <section>
 	To add individual animate-in, put class="fragment"
@@ -186,9 +198,9 @@
 -->
 				<section>
 					<h3 class="fragment" style="position:fixed; top:0; padding-left: 13%;"><code>print(stc.future_events)</code></h3>
-					<p class="fragment" style="padding-bottom:0.5em;">Python workshop for beginners!</p>
-					<p class="fragment" style="padding-bottom:0.5em;">React Native Mobile App @ 8th - 9th September</p>
-					<p class="fragment" style="padding-bottom:0.5em;">Telegram bot w/ Azure & Node.js @ 19th September</p>
+					<p class="fragment" style="padding-bottom:0.5em;">Telegram bot workshop @ 12th September</p>
+					<p class="fragment" style="padding-bottom:0.5em;">React Native Mobile App @ 22th September</p>
+					<p class="fragment" style="padding-bottom:0.5em;">Facebooker talk @ TBC</p>
 					<p class="fragment" style="padding-bottom:0.5em;">Makerspace opening!</p>
 					<p class="fragment" style="padding-bottom:0.5em;">...and more!</p>
 				</section>
@@ -217,7 +229,7 @@
 				</section>
 
 
-				<section>
+	<!--			<section>
 					<h4><code>> print(stc.slack_info)</code></h4>
 					<p class="fragment"><code><strong>> https://bit.do/stcslack/</strong></code></p>
 					<h4 class="fragment"><code>> print(stc.slack_QR)</code></h4>
@@ -235,16 +247,16 @@
 					<h4><code>> print(stc.contact_info)</code></h4>
 					<p class="fragment"><code><strong>> Email: sunwaytechclub@gmail.com</strong></code></p>
 					<p class="fragment"><code><strong>> Facebook: fb.com/sunwaytechclub/</strong></code></p>
-				</section>
+				</section> -->
 
-				<section>
+<!--				<section>
 					<h4><code>> print(stc.contact)</code></h4>
 					<img src="img/stclogo.png" style="border: none; width: 25%">
 					<p class="fragment"><code><strong>> https://bit.do/stcslack/</strong></code></p>
 					<p class="fragment"><code><strong>> https://bit.do/stctelegram</strong></code></p>
 					<p class="fragment"><code><strong>> Email: sunwaytechclub@gmail.com/</strong></code></p>
 					<p class="fragment"><code><strong>> Facebook: fb.com/sunwaytechclub/</strong></code></p>
-				</section>
+				</section> -->
 
 				<section>
 					<h3>PSSSSTT!</h3>
@@ -257,9 +269,9 @@
 					<h3 class="fragment"><code><strong>> return 0 </strong></code></h3>
 				</section>
 
-				<section>
+<!--				<section>
 					<h3 class="fragment">Thank you, and welcome to University life!</h3>
-				</section>
+				</section> -->
 
 				<section>
 					<h4><code>> print(stc.contact)</code></h4>
