--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides">
 				<section>
-					<h3>Hello Freshies!</h3>
+					<h3>Hello everyone!</h3>
 					<br>
 					<p>We are:</p>
 					<img src="img/stclogo.png" style="border: none; width: 60%; margin: 1em; padding: 1em;"/>
