--- a/index.html
+++ b/index.html
@@ -6,9 +6,6 @@
 
 	<title>Welcome to STC!</title>
 
-	<meta name="description" content="Sunway Tech Club - Orientation Slides">
-	<meta name="author" content="Sunway Tech Club">
-
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
@@ -111,59 +108,33 @@
 
 			<section>
 				<h3 class="fragment" style="position:fixed; top:0; padding-left: 13%;"><code>print(stc.past_events[0])</code></h3>
-				<h3 class="fragment" style="padding-top: 1em">AppLaunch</h3>
-				<img src="img/applaunch.jpg" class="fragment" style="width:60%; border: none">
-			</section>
-
-			<section>
-				<h3 class="fragment" style="position:fixed; top:0; padding-left: 13%;"><code>print(stc.past_events[1])</code></h3>
 				<h3 class="fragment" style="padding-top: 1em">Android</h3>
 				<img src="img/android_logo_PNG35.jpg" class="fragment" style="width:60%; border: none">
 			</section>
 
 			<section>
-				<h3 class="fragment" style="position:fixed; top:0; padding-left: 13%;"><code>print(stc.past_events[2])</code></h3>
+				<h3 class="fragment" style="position:fixed; top:0; padding-left: 13%;"><code>print(stc.past_events[1])</code></h3>
 				<h3 class="fragment" style="padding-top: 1em">iOS</h3>
 				<img src="img/iosworkshop.jpg" class="fragment" style="width:60%; border: none">
 			</section>
 
 			<section>
-				<h3 class="fragment" style="position:fixed; top:0; padding-left: 13%;"><code>print(stc.past_events[3])</code></h3>
+				<h3 class="fragment" style="position:fixed; top:0; padding-left: 13%;"><code>print(stc.past_events[2])</code></h3>
 				<h3 class="fragment" style="padding-top: 1em">CityHack</h3>
 				<img src="img/cityhack.jpg" class="fragment" style="width:60%; border: none">
 			</section>
 
 			<section>
-				<h3 class="fragment" style="position:fixed; top:0; padding-left: 13%;"><code>print(stc.past_events[4])</code></h3>
-				<h3 class="fragment" style="padding-top: 1em">Python Game Workshop</h3>
-				<img src="img/pythonworkshop.jpg" class="fragment" style="width:60%; border: none">
-			</section>
-
-			<section>
-				<h3 class="fragment" style="position:fixed; top:0; padding-left: 13%;"><code>print(stc.past_events[5])</code></h3>
-				<h3 class="fragment" style="padding-top: 1em">Ethereum Workshop</h3>
-				<img src="img/ethworkshop.jpg" class="fragment" style="width:60%; border: none">
-			</section>
-
-			<section>
-				<h3 class="fragment" style="position:fixed; top:0; padding-left: 13%;"><code>print(stc.past_events[6])</code></h3>
+				<h3 class="fragment" style="position:fixed; top:0; padding-left: 13%;"><code>print(stc.past_events[3])</code></h3>
 				<h3 class="fragment" style="padding-top: 1em">WebLaunch</h3>
 				<img src="img/weblaunch.jpg" class="fragment" style="width:60%; border: none">
 			</section>
 
 			<section>
-				<h3 class="fragment" style="position:fixed; top:0; padding-left: 13%;"><code>print(stc.past_events[7])</code></h3>
-				<h3 class="fragment" style="padding-top: 1em">GitHub Workshop</h3>
-				<img src="img/github.jpg" class="fragment" style="width:60%; border: none">
-			</section>
-
-			<section>
-				<section>
-					<h3 class="fragment" style="position:fixed; top:0; padding-left: 13%;"><code>print(stc.past_events[8])</code></h3>
-					<h3 class="fragment" style="padding-top: 1em">Google I/O Extended 2018</h3>
-					<img src="img/ioxkl.jpg" class="fragment" style="width:60%; border: none">
-				</section>
-				<section>
+				<h3 class="fragment" style="position:fixed; top:0; padding-left: 13%;"><code>print(stc.past_events[4])</code></h3>
+				<h3 class="fragment" style="padding-top: 1em">Google I/O Extended 2018</h3>
+				<img src="img/ioxkl.jpg" class="fragment" style="width:60%; border: none">
+				<!-- <section>
 					<h3><code>print(stc.past_events[7])</code></h3>
 					<h3>Google I/O Extended 2018</h3>
 					<img src="img/ioxkl2.jpg" class="fragment" style="width:30%; border: none">
@@ -182,27 +153,51 @@
 					<h3><code>print(stc.past_events[7])</code></h3>
 					<h3>Google I/O Extended 2018</h3>
 					<img src="img/ioxkl4.jpg" class="fragment" style="width:60%; border: none">
-				</section>
+				</section> -->
 			</section>
 
 			<section>
-				<h3 class="fragment" style="position:fixed; top:0; padding-left: 13%;"><code>print(stc.past_events[9])</code></h3>
+				<h3 class="fragment" style="position:fixed; top:0; padding-left: 13%;"><code>print(stc.past_events[5])</code></h3>
 				<h3 class="fragment" style="padding-top: 1em">Python Workshop 2018</h3>
 				<img src="img/pythonworkshop2.png" class="fragment" style="width:60%; border: none">
 			</section>
 
-			<!--
-	To add new slide, just create a new <section>
-	To add individual animate-in, put class="fragment"
+			<section>
+				<h3 class="fragment" style="position:fixed; top:0; padding-left: 13%;"><code>print(stc.past_events[6])</code></h3>
+				<h3 class="fragment" style="padding-top: 1em">React Native</h3>
+				<img src="img/github.jpg" class="fragment" style="width:60%; border: none">
+			</section>
 
-	Just copy the past events sections and change the photos to add the future events
--->
+			<section>
+				<h3 class="fragment" style="position:fixed; top:0; padding-left: 13%;"><code>print(stc.past_events[7])</code></h3>
+				<h3 class="fragment" style="padding-top: 1em">Web Scrapping with Python</h3>
+				<img src="img/pythonworkshop2.png" class="fragment" style="width:60%; border: none">
+			</section>
+
+			<section>
+				<h3 class="fragment" style="position:fixed; top:0; padding-left: 13%;"><code>print(stc.past_events[8])</code></h3>
+				<h3 class="fragment" style="padding-top: 1em">iLabs Makerspace Opening</h3>
+				<img src="img/pythonworkshop2.png" class="fragment" style="width:60%; border: none">
+			</section>
+
+			<section>
+				<h3 class="fragment" style="position:fixed; top:0; padding-left: 13%;"><code>print(stc.past_events[9])</code></h3>
+				<h3 class="fragment" style="padding-top: 1em">GDG DevFest X Firebase Summit 2018</h3>
+				<img src="img/pythonworkshop2.png" class="fragment" style="width:60%; border: none">
+			</section>
+
+			<section>
+				<h3 class="fragment" style="position:fixed; top:0; padding-left: 13%;"><code>print(stc.past_events[i])</code></h3>
+				<p class="fragment" style="padding-bottom:0.5em;">AppLaunch</p>
+				<p class="fragment" style="padding-bottom:0.5em;">Python Game Workshop</p>
+				<p class="fragment" style="padding-bottom:0.5em;">Ethereum Workshop</p>
+				<p class="fragment" style="padding-bottom:0.5em;">Facebooker Talk</p>
+				<p class="fragment" style="padding-bottom:0.5em;">...and more!</p>
+			</section>
+
 			<section>
 				<h3 class="fragment" style="position:fixed; top:0; padding-left: 13%;"><code>print(stc.future_events)</code></h3>
-				<p class="fragment" style="padding-bottom:0.5em;">Telegram bot workshop @ 12th September</p>
-				<p class="fragment" style="padding-bottom:0.5em;">React Native Mobile App @ 22th September</p>
-				<p class="fragment" style="padding-bottom:0.5em;">Facebooker talk @ TBC</p>
-				<p class="fragment" style="padding-bottom:0.5em;">Makerspace opening!</p>
+
 				<p class="fragment" style="padding-bottom:0.5em;">...and more!</p>
 			</section>
 
@@ -296,14 +291,14 @@
 		Reveal.initialize({
 			controls: true,
 			progress: true,
-			// history: true,
+			history: false,
 			center: true,
 			width: 1024,
 			height: 720,
 			// autoSlide: 1800,
 			// loop: true,
 
-			transition: 'slide', // none/fade/slide/convex/concave/zoom
+			// transition: 'slide', // none/fade/slide/convex/concave/zoom
 
 			// More info https://github.com/hakimel/reveal.js#dependencies
 			dependencies: [
