add speed typing and java workshop

--- a/index.html
+++ b/index.html
@@ -196,9 +196,15 @@
 			</section>
 
 			<section>
-				<h3 class="fragment" style="position:fixed; top:0; padding-left: 13%;"><code>print(stc.future_events)</code></h3>
+				<h3 class="fragment" style="position:fixed; top:0; padding-left: 13%;"><code>print(stc.future_events[0])</code></h3>
+				<h3 class="fragment" style="padding-top: 1em">Basic Java Workshop</h3>
+				<img src="img/javaworkshop.png" class="fragment" style="width:60%; border: none">
+			</section>
 
-				<p class="fragment" style="padding-bottom:0.5em;">...and more!</p>
+			<section>
+				<h3 class="fragment" style="position:fixed; top:0; padding-left: 13%;"><code>print(stc.future_events[1])</code></h3>
+				<h3 class="fragment" style="padding-top: 1em">Speed Typing Competition</h3>
+				<img src="img/speedtype.png" class="fragment" style="width:60%; border: none">
 			</section>
 
 			<section>
