--- a/index.html
+++ b/index.html
@@ -165,25 +165,25 @@
 			<section>
 				<h3 class="fragment" style="position:fixed; top:0; padding-left: 13%;"><code>print(stc.past_events[6])</code></h3>
 				<h3 class="fragment" style="padding-top: 1em">React Native</h3>
-				<img src="img/github.jpg" class="fragment" style="width:60%; border: none">
+				<img src="img/react.jpg" class="fragment" style="width:60%; border: none">
 			</section>
 
 			<section>
 				<h3 class="fragment" style="position:fixed; top:0; padding-left: 13%;"><code>print(stc.past_events[7])</code></h3>
 				<h3 class="fragment" style="padding-top: 1em">Web Scrapping with Python</h3>
-				<img src="img/pythonworkshop2.png" class="fragment" style="width:60%; border: none">
+				<img src="img/webscrape.png" class="fragment" style="width:60%; border: none">
 			</section>
 
 			<section>
 				<h3 class="fragment" style="position:fixed; top:0; padding-left: 13%;"><code>print(stc.past_events[8])</code></h3>
 				<h3 class="fragment" style="padding-top: 1em">iLabs Makerspace Opening</h3>
-				<img src="img/pythonworkshop2.png" class="fragment" style="width:60%; border: none">
+				<img src="img/makerspace.png" class="fragment" style="width:60%; border: none">
 			</section>
 
 			<section>
 				<h3 class="fragment" style="position:fixed; top:0; padding-left: 13%;"><code>print(stc.past_events[9])</code></h3>
 				<h3 class="fragment" style="padding-top: 1em">GDG DevFest X Firebase Summit 2018</h3>
-				<img src="img/pythonworkshop2.png" class="fragment" style="width:60%; border: none">
+				<img src="img/firebase.png" class="fragment" style="width:60%; border: none">
 			</section>
 
 			<section>
@@ -198,13 +198,13 @@
 			<section>
 				<h3 class="fragment" style="position:fixed; top:0; padding-left: 13%;"><code>print(stc.future_events[0])</code></h3>
 				<h3 class="fragment" style="padding-top: 1em">Basic Java Workshop</h3>
-				<img src="img/javaworkshop.png" class="fragment" style="width:80%; border: none">
+				<img src="img/javaworkshop.png" class="fragment" style="width:60%; border: none">
 			</section>
 
 			<section>
 				<h3 class="fragment" style="position:fixed; top:0; padding-left: 13%;"><code>print(stc.future_events[1])</code></h3>
 				<h3 class="fragment" style="padding-top: 1em">Speed Typing Competition</h3>
-				<img src="img/speedtype.png" class="fragment" style="width:80%; border: none">
+				<img src="img/speedtype.png" class="fragment" style="width:60%; border: none">
 			</section>
 
 			<section>
