Apply auto transition & loop

--- a/index.html
+++ b/index.html
@@ -302,9 +302,9 @@
 			width: 1024,
 			height: 720,
 			autoSlide: 0,
-			// loop: true,
+			loop: true,
 
-			// transition: 'slide', // none/fade/slide/convex/concave/zoom
+			transition: 'slide', // none/fade/slide/convex/concave/zoom
 
 			// More info https://github.com/hakimel/reveal.js#dependencies
 			dependencies: [
