fixed header positioning

--- a/index.html
+++ b/index.html
@@ -54,19 +54,19 @@
 			</section>
 
 			<section>
-				<h2 class="fragment" style="position:fixed; top:0; padding-left: 12%;"><code>print(stc.purpose)</code></h2>
+				<h2 class="fragment"><code>print(stc.purpose)</code></h2>
 				<p class="fragment" style="padding-top: 2em;">There is a gap between the tech education and the tech industry</p>
 				<p class="fragment"><img src="img/bridge.png" style="width: 60%;"></p>
 			</section>
 
 			<section>
-				<h2 class="fragment" style="position:fixed; top:0; padding-left: 14%;"><code>print(stc.vision)</code></h2>
+				<h2 class="fragment"><code>print(stc.vision)</code></h2>
 				<p class="fragment">Building a community of Sunway students with the aspiration of minimising the disparity between
 					tech education, tech industry, and tech entrepreneurship.</p>
 			</section>
 
 			<section>
-				<h2 class="fragment" style="position:fixed; top:0; padding-left: 8%;"><code>print(stc.motivators)</code></h2>
+				<h2 class="fragment"><code>print(stc.motivators)</code></h2>
 				<p class="fragment">"No motivation and inspiration"</p>
 				<p class="fragment">"No place to apply what I've learned"</p>
 				<p class="fragment">"There's no community"</p>
@@ -107,31 +107,31 @@
 			</section>
 
 			<section>
-				<h3 class="fragment" style="position:fixed; top:0; padding-left: 13%;"><code>print(stc.past_events[0])</code></h3>
+				<h3 class="fragment"><code>print(stc.past_events[0])</code></h3>
 				<h3 class="fragment" style="padding-top: 1em">Android</h3>
 				<img src="img/android_logo_PNG35.jpg" class="fragment" style="width:60%; border: none">
 			</section>
 
 			<section>
-				<h3 class="fragment" style="position:fixed; top:0; padding-left: 13%;"><code>print(stc.past_events[1])</code></h3>
+				<h3 class="fragment"><code>print(stc.past_events[1])</code></h3>
 				<h3 class="fragment" style="padding-top: 1em">iOS</h3>
 				<img src="img/iosworkshop.jpg" class="fragment" style="width:60%; border: none">
 			</section>
 
 			<section>
-				<h3 class="fragment" style="position:fixed; top:0; padding-left: 13%;"><code>print(stc.past_events[2])</code></h3>
+				<h3 class="fragment"><code>print(stc.past_events[2])</code></h3>
 				<h3 class="fragment" style="padding-top: 1em">CityHack</h3>
 				<img src="img/cityhack.jpg" class="fragment" style="width:60%; border: none">
 			</section>
 
 			<section>
-				<h3 class="fragment" style="position:fixed; top:0; padding-left: 13%;"><code>print(stc.past_events[3])</code></h3>
+				<h3 class="fragment"><code>print(stc.past_events[3])</code></h3>
 				<h3 class="fragment" style="padding-top: 1em">WebLaunch</h3>
 				<img src="img/weblaunch.jpg" class="fragment" style="width:60%; border: none">
 			</section>
 
 			<section>
-				<h3 class="fragment" style="position:fixed; top:0; padding-left: 13%;"><code>print(stc.past_events[4])</code></h3>
+				<h3 class="fragment"><code>print(stc.past_events[4])</code></h3>
 				<h3 class="fragment" style="padding-top: 1em">Google I/O Extended 2018</h3>
 				<img src="img/ioxkl.jpg" class="fragment" style="width:60%; border: none">
 				<!-- <section>
@@ -157,37 +157,37 @@
 			</section>
 
 			<section>
-				<h3 class="fragment" style="position:fixed; top:0; padding-left: 13%;"><code>print(stc.past_events[5])</code></h3>
+				<h3 class="fragment"><code>print(stc.past_events[5])</code></h3>
 				<h3 class="fragment" style="padding-top: 1em">Python Workshop 2018</h3>
 				<img src="img/pythonworkshop2.png" class="fragment" style="width:60%; border: none">
 			</section>
 
 			<section>
-				<h3 class="fragment" style="position:fixed; top:0; padding-left: 13%;"><code>print(stc.past_events[6])</code></h3>
+				<h3 class="fragment"><code>print(stc.past_events[6])</code></h3>
 				<h3 class="fragment" style="padding-top: 1em">React Native</h3>
 				<img src="img/react.jpg" class="fragment" style="width:60%; border: none">
 			</section>
 
 			<section>
-				<h3 class="fragment" style="position:fixed; top:0; padding-left: 13%;"><code>print(stc.past_events[7])</code></h3>
+				<h3 class="fragment"><code>print(stc.past_events[7])</code></h3>
 				<h3 class="fragment" style="padding-top: 1em">Web Scrapping with Python</h3>
 				<img src="img/webscrape.jpg" class="fragment" style="width:60%; border: none">
 			</section>
 
 			<section>
-				<h3 class="fragment" style="position:fixed; top:0; padding-left: 13%;"><code>print(stc.past_events[8])</code></h3>
+				<h3 class="fragment"><code>print(stc.past_events[8])</code></h3>
 				<h3 class="fragment" style="padding-top: 1em">iLabs Makerspace Opening</h3>
 				<img src="img/makerspace.jpg" class="fragment" style="width:60%; border: none">
 			</section>
 
 			<section>
-				<h3 class="fragment" style="position:fixed; top:0; padding-left: 13%;"><code>print(stc.past_events[9])</code></h3>
+				<h3 class="fragment"><code>print(stc.past_events[9])</code></h3>
 				<h3 class="fragment" style="padding-top: 1em">GDG DevFest X Firebase Summit 2018</h3>
 				<img src="img/firebase.jpg" class="fragment" style="width:60%; border: none">
 			</section>
 
 			<section>
-				<h3 class="fragment" style="position:fixed; top:0; padding-left: 13%;"><code>print(stc.past_events[i])</code></h3>
+				<h3 class="fragment"><code>print(stc.past_events[i])</code></h3>
 				<p class="fragment" style="padding-bottom:0.5em;">AppLaunch</p>
 				<p class="fragment" style="padding-bottom:0.5em;">Python Game Workshop</p>
 				<p class="fragment" style="padding-bottom:0.5em;">Ethereum Workshop</p>
@@ -196,13 +196,13 @@
 			</section>
 
 			<section>
-				<h3 class="fragment" style="position:fixed; top:0; padding-left: 13%;"><code>print(stc.future_events[0])</code></h3>
+				<h3 class="fragment"><code>print(stc.future_events[0])</code></h3>
 				<h3 class="fragment" style="padding-top: 1em">Basic Java Workshop</h3>
 				<img src="img/javaworkshop.jpg" class="fragment" style="width:60%; border: none">
 			</section>
 
 			<section>
-				<h3 class="fragment" style="position:fixed; top:0; padding-left: 13%;"><code>print(stc.future_events[1])</code></h3>
+				<h3 class="fragment"><code>print(stc.future_events[1])</code></h3>
 				<h3 class="fragment" style="padding-top: 1em">Speed Typing Competition</h3>
 				<img src="img/speedtype.jpg" class="fragment" style="width:60%; border: none">
 			</section>
