enabled auto slide

--- a/index.html
+++ b/index.html
@@ -301,7 +301,9 @@
 			center: true,
 			width: 1024,
 			height: 720,
-			autoSlide: 0,
+
+			// uncomment these for slideshow mode
+			autoSlide: 1,
 			loop: true,
 
 			transition: 'slide', // none/fade/slide/convex/concave/zoom
