--- a/index.html
+++ b/index.html
@@ -303,8 +303,9 @@
 			height: 720,
 
 			// uncomment these for slideshow mode
-			autoSlide: 1,
+			autoSlide: 5000,
 			loop: true,
+			fragments: false,
 
 			transition: 'slide', // none/fade/slide/convex/concave/zoom
 
