--- a/index.html
+++ b/index.html
@@ -194,18 +194,17 @@
 				<p class="fragment" style="padding-bottom:0.5em;">Facebooker Talk</p>
 				<p class="fragment" style="padding-bottom:0.5em;">...and more!</p>
 			</section>
-
+			
 			<section>
-				<h3 class="fragment"><code>print(stc.future_events[0])</code></h3>
-				<h3 class="fragment" style="padding-top: 1em">Basic Java Workshop</h3>
-				<img src="img/javaworkshop.jpg" class="fragment" style="width:60%; border: none">
+				<h3 class="fragment"><code>print(stc.future_events[i])</code></h3>
+				<p class="fragment" style="padding-bottom:0.5em;">13 FEB - Security & Privacy Talk</p>
+				<p class="fragment" style="padding-bottom:0.5em;">2 APR - JavaFX Workshop</p>
+				<p class="fragment" style="padding-bottom:0.5em;">2 APR - Web Launch 3.0</p>
+				<p class="fragment" style="padding-bottom:0.5em;">25 APR - Web Launch Accelerated</p>
+				<p class="fragment" style="padding-bottom:0.5em;">7 SEPT - CityHack 2</p>
+				<p class="fragment" style="padding-bottom:0.5em;">...and more!</p>
 			</section>
 
-			<section>
-				<h3 class="fragment"><code>print(stc.future_events[1])</code></h3>
-				<h3 class="fragment" style="padding-top: 1em">Speed Typing Competition</h3>
-				<img src="img/speedtype.jpg" class="fragment" style="width:60%; border: none">
-			</section>
 
 			<section>
 				<h3><code>if(student.interest == true)</code></h3>
