--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
 				<h4><code>> print(stc.contact)</code></h4>
 				<img src="img/stclogo.png" style="border: none; width: 25%">
 				<p><code><strong>> https://sunwaytechclub.slack.com/</strong></code></p>
-				<p><code><strong>> https://bit.do/stctelegram/</strong></code></p>
+				<p><code><strong>> https://sunwaytechclub.org/telegram/</strong></code></p>
 				<p><code><strong>> Email: sunwaytechclub@gmail.com/</strong></code></p>
 				<p><code><strong>> Facebook: fb.com/sunwaytechclub/</strong></code></p>
 			</section>
