removed slideshow mode for orientation

--- a/index.html
+++ b/index.html
@@ -302,9 +302,9 @@
 			height: 720,
 
 			// uncomment these for slideshow mode
-			autoSlide: 5000,
-			loop: true,
-			fragments: false,
+			//autoSlide: 5000,
+			//loop: true,
+			//fragments: false,
 
 			transition: 'slide', // none/fade/slide/convex/concave/zoom
 
