Add weblaunch poster

--- a/index.html
+++ b/index.html
@@ -204,6 +204,12 @@
 				<p class="fragment" style="padding-bottom:0.5em;">7 SEPT - CityHack 2</p>
 				<p class="fragment" style="padding-bottom:0.5em;">...and more!</p>
 			</section>
+			
+			<section>
+				<h3 class="fragment"><code>print(stc.past_events[6])</code></h3>
+				<h3 class="fragment" style="padding-top: 1em">WebLaunch</h3>
+				<img src="img/weblaunch.png" class="fragment" style="width:80%; border: none">
+			</section>
 
 
 			<section>
