fix weblaunch poster position

--- a/index.html
+++ b/index.html
@@ -206,9 +206,8 @@
 			</section>
 			
 			<section>
-				<h3 class="fragment"><code>print(stc.past_events[6])</code></h3>
-				<h3 class="fragment" style="padding-top: 1em">WebLaunch</h3>
-				<img src="img/weblaunch.png" class="fragment" style="width:50%; border: none">
+				<h4 class="fragment"><code>print(stc.web_launch[3])</code></h4>
+				<img src="img/weblaunch.png" class="fragment" style="width:40%; border: none">
 			</section>
 
 
