change future events

--- a/index.html
+++ b/index.html
@@ -197,11 +197,10 @@
 			
 			<section>
 				<h3 class="fragment"><code>print(stc.future_events[i])</code></h3>
-				<p class="fragment" style="padding-bottom:0.5em;">13 FEB - Security & Privacy Talk</p>
-				<p class="fragment" style="padding-bottom:0.5em;">2 APR - JavaFX Workshop</p>
-				<p class="fragment" style="padding-bottom:0.5em;">2 APR - Web Launch 3.0</p>
-				<p class="fragment" style="padding-bottom:0.5em;">25 APR - Web Launch Accelerated</p>
-				<p class="fragment" style="padding-bottom:0.5em;">7 SEPT - CityHack 2</p>
+				
+				<p class="fragment" style="padding-bottom:0.5em;">8 APR - Web Launch 3.0</p>
+				<p class="fragment" style="padding-bottom:0.5em;">22 APR - Web Launch Accelerated</p>
+				<p class="fragment" style="padding-bottom:0.5em;">TBA - JavaFX Workshop</p>
 				<p class="fragment" style="padding-bottom:0.5em;">...and more!</p>
 			</section>
 			
