--- a/index.html
+++ b/index.html
@@ -92,20 +92,43 @@
 						<div class="row">
 							<div class="col">
 								<figure class="figure">
+									<img class="figure-img img-fluid" src="images/events/Io19.jpg" alt="">
+									<figcaption style="text-align: center;" class="figure-caption">Google I/O Extended 2019</figcaption>
+								</figure>
+							</div>
+							<div class="col">
+								<figure class="figure">
+									<img style="border-style: solid; border-width: 1px;" class="figure-img img-fluid" src="images/events/Java.png" alt="">
+									<figcaption class="figure-caption">Basic Java Workshop</figcaption>
+								</figure>
+							</div>
+							<div class="col">
+								<figure class="figure">
+									<img class="figure-img img-fluid" src="images/events/Weblaunch19.jpg" alt="">
+									<figcaption style="text-align: center;" class="figure-caption">WebLaunch 2019</figcaption>
+								</figure>
+							</div>
+						</div>
+					</section>
+					<section>
+						<h1>Past Events</h1>
+						<div class="row">
+							<div class="col">
+								<figure class="figure">
 									<img class="figure-img img-fluid" src="images/events/ioxkl.jpg" alt="">
-									<figcaption class="figure-caption">Google I/O Extended 2018</figcaption>
+									<figcaption style="text-align: center;" class="figure-caption">Google I/O Extended 2018</figcaption>
 								</figure>
 							</div>
 							<div class="col">
 								<figure class="figure">
 									<img class="figure-img img-fluid" src="images/events/makerspace.jpg" alt="">
-									<figcaption class="figure-caption">iLabs Makerspace Opening</figcaption>
+									<figcaption style="text-align: center;" class="figure-caption">iLabs Makerspace Opening</figcaption>
 								</figure>
 							</div>
 							<div class="col">
 								<figure class="figure">
 									<img class="figure-img img-fluid" src="images/events/cityhack.jpg" alt="">
-									<figcaption class="figure-caption">Cityhack</figcaption>
+									<figcaption style="text-align: center;" class="figure-caption">Cityhack 2017</figcaption>
 								</figure>
 							</div>
 						</div>
@@ -116,19 +139,19 @@
 							<div class="col">
 								<figure class="figure">
 									<img class="figure-img img-fluid" src="images/events/firebase.jpg" alt="">
-									<figcaption class="figure-caption">GDG DevFest X Firebase Summit 2018</figcaption>
+									<figcaption style="text-align: center;" class="figure-caption">GDG DevFest X Firebase Summit 2018</figcaption>
+								</figure>
+							</div>
+							<div class="col">
+								<figure class="figure">
+									<img style="border-style: solid; border-width: 1px;" class="figure-img img-fluid" src="images/events/pythonworkshop2.png" alt="">
+									<figcaption style="text-align: center;" class="figure-caption">Python Workshop</figcaption>
 								</figure>
 							</div>
 							<div class="col">
 								<figure class="figure">
 									<img class="figure-img img-fluid" src="images/events/weblaunch.jpg	" alt="">
-									<figcaption class="figure-caption">WebLaunch</figcaption>
-								</figure>
-							</div>
-							<div class="col">
-								<figure class="figure">
-									<img class="figure-img img-fluid" src="images/events/pythonworkshop2.png" alt="">
-									<figcaption class="figure-caption">Python Workshop</figcaption>
+									<figcaption style="text-align: center;" class="figure-caption">WebLaunch 2018</figcaption>
 								</figure>
 							</div>
 						</div>
@@ -139,19 +162,19 @@
 							<div class="col">
 								<figure class="figure">
 									<img class="figure-img img-fluid" src="images/events/iosworkshop.jpg" alt="">
-									<figcaption class="figure-caption">iOS Workshop</figcaption>
+									<figcaption style="text-align: center;" class="figure-caption">iOS Workshop</figcaption>
 								</figure>
 							</div>
 							<div class="col">
 								<figure class="figure">
-									<img class="figure-img img-fluid" src="images/events/android_logo_PNG35.jpg" alt="">
-									<figcaption class="figure-caption">Android Workshop</figcaption>
+									<img style="border-style: solid; border-width: 1px;" class="figure-img img-fluid" src="images/events/android_logo_PNG35.jpg" alt="">
+									<figcaption style="text-align: center;" class="figure-caption">Android Workshop</figcaption>
 								</figure>
 							</div>
 							<div class="col">
 								<figure class="figure">
 									<img class="figure-img img-fluid" src="images/events/react.jpg" alt="">
-									<figcaption class="figure-caption">React Native Workshop</figcaption>
+									<figcaption style="text-align: center;" class="figure-caption">React Native Workshop</figcaption>
 								</figure>
 							</div>
 						</div>
@@ -160,13 +183,13 @@
 				<section class="text-left">
 					<h1>Future Events</h1>
 					<ul>
-						<li>8 APR - Web Launch 3.0</li>
-						<li>22 APR - Web Launch Accelerated</li>
-						<li>TBA - JavaFX Workshop</li>
+						<li>17 & 19 SEP - Excel Workshop</li>
+						<li>TBA - Eduhack 2019</li>
+						<li>TBA - Hacktoberfest</li>
 						<li>...and more!</li>
 					</ul>
 				</section>
-				<section>
+				<!-- <section>
 					<h3>WebLaunch 3.0</h3>
 					<div class="container">
 						<div class="row justify-content-center">
@@ -176,7 +199,7 @@
 
 						</div>
 					</div>
-				</section>
+				</section> --> 
 				<section>
 					<div class="container">
 						<div class="row justify-content-center">
